# rust-ffi-starwars-api

./: .gitignore  Cargo.toml  Makefile  README.md
openapi/: starwars.yaml
sdk/python/: main.py  starwars.py
src/: lib.rs
